--- a/generator.html
+++ b/generator.html
@@ -350,7 +350,7 @@
                 <div class="borderD">
                         <h3 style="color: white;
                         font-weight: 700;
-                        margin-bottom: 20px;">Kuber Form</h3>
+                        margin-bottom: 20px;">Kubernetes YAML</h3>
                     <div class="form-horizontal" role="form">
                         <div class="form-group">
                             <label for="txtfrom" class="col-md-2 control-label">FROM </label>
@@ -654,17 +654,6 @@
                         }
                     }
                     download('docker.yaml', yamlfile);
-
-
-                    // var content = "hhi"
-                    // // any kind of extension (.txt,.cpp,.cs,.bat)
-                    // var filename = "hello.yaml";
-
-                    // var blob = new Blob([content], {
-                    //     type: "text/plain;charset=utf-8"
-                    // });
-
-                    // saveAs(blob, filename);
 
                 },
             }
