changed website name

--- a/generator.html
+++ b/generator.html
@@ -110,16 +110,16 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebSiteName</a>
+                <a class="navbar-brand" href="#">Kubernetes Docker Deployment Builder</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#docker">Dockerfile</a></li>
+                <li><a href="#Kubernetes">Dockerfile</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="">Kubernetes Yaml Files
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#Kubernetes">Deployment</a></li>
+                        <li><a href="#docker">Deployment</a></li>
                         <li><a href="#">Service</a></li>
                     </ul>
                 </li>
